--- a/portfolio/src/components/Header/Header.module.css
+++ b/portfolio/src/components/Header/Header.module.css
@@ -3,9 +3,18 @@
     flex-direction: column;
     align-items: center;
 
+    padding: 20px 0px;
     gap: 30px;
     width: 100%;
     background-color: rgb(32, 32, 32);
+    box-shadow: 0px 10px 10px rgba(32, 32, 32, 0.5);
+    z-index: 100;
+    position: relative;
+    transition: all 0.5s;
+
+    &:hover{
+        scale: 1.05;
+    }
 
     .headUp{
         display: flex;
